# yara-grep

./: README.md  pyproject.toml
yara_grep/: cli.py
